--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en" dir="ltr">
   <head>
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS3FBYS25_R4mi8JB-zTHfVfymTfnUjZjHsDw&s" type="image/x-icon">
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Computer Architecture Lectures - Vertical Design</title>
+    <title>Architecture Lectures</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -476,7 +478,7 @@
 
 
 
-      
+
       <div class="footer">
         <p>
           Designed by <strong>AhmadEssawii</strong> | Computer Architecture
